syntax = "proto3";

package fileTransfer;

enum Status{
    ON_CREATE = 0;
    ON_UPLOAD = 1;
    ON_FINISH = 2;
}

message uploadByte{
    Status code = 1;
    string data = 2;
}

message status{
    Status code = 1;
}

service fileTransfer{
    rpc uploadFile (uploadByte) returns (status) {}
}